[gd_scene load_steps=2 format=3 uid="uid://u5lk7hq0xk45"]

[ext_resource type="Script" path="res://Node2D.gd" id="1_lbx52"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_lbx52")

[node name="Button" type="Button" parent="."]
offset_left = 390.0
offset_top = 392.0
offset_right = 656.0
offset_bottom = 435.0
text = "click me"

[node name="Label" type="Label" parent="."]
offset_left = 389.0
offset_top = 514.0
offset_right = 429.0
offset_bottom = 537.0

[node name="Label2" type="Label" parent="."]
offset_left = 390.0
offset_top = 568.0
offset_right = 457.0
offset_bottom = 594.0

[node name="Button2" type="Button" parent="."]
offset_left = 348.0
offset_top = 242.0
offset_right = 709.0
offset_bottom = 273.0
text = "restart
"

[node name="Button3" type="Button" parent="."]
offset_left = 53.0
offset_top = 29.0
offset_right = 281.0
offset_bottom = 92.0
text = "Back"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
